# 01

./: README.md  auto_backup.sh
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake
new/include/: DrawTrack.hpp  ExtendedKalman.hpp  HikCamera.hpp  Serial.hpp
new/main/: CMakeLists.txt  HikCamera.cpp  Main4.cpp
new/src/: calib_result.yml  congfig.yaml
type2/: CMakeLists.txt
type2/config/: config.yaml
type2/include/: Config.hpp  ExtendedKalman.hpp  HikCamera.hpp  PoseSolve.hpp  Struct.hpp
type2/install/: local_setup.sh  setup.sh
type2/install/armor_pose_solver/lib/armor_pose_solver/: armor_pose_node
type2/install/armor_pose_solver/share/ament_index/resource_index/parent_prefix_path/: armor_pose_solver
type2/install/armor_pose_solver/share/armor_pose_solver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
type2/install/armor_pose_solver/share/armor_pose_solver/cmake/: armor_pose_solverConfig.cmake
type2/install/armor_pose_solver/share/armor_pose_solver/config/: config.yaml
type2/install/armor_pose_solver/share/armor_pose_solver/launch/: pose_launch.py
type2/log/: latest_build
type2/src/: Config.cpp  ExtendedKalman.cpp  Main1.cpp  PoseSolve.cpp  Serial.cpp  Yolo.cpp  Yolo1.cpp
v1(cmake/: CMakeLists.txt  U.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  app2  app3  app4  hello  hello.cpp
v1(cmake/output/: U  V  W  Y
v2(图像处理/: CMakeCache.txt  CMakeLists.txt  Makefile  a1  b1  b2  b3  b4  cmake_install.cmake  cv1.cpp  cv2.cpp  cv3.cpp  cv4.cpp  test.cpp
v3(形态学/: CMakeCache.txt  CMakeLists.txt  Makefile  c1  c2  c3  c4  c5  c6  cmake_install.cmake  cvv1.cpp  cvv2.cpp  cvv3.cpp  cvv4.cpp  cvv5.cpp  cvv6.cpp
v4(轮廓/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  d1.cpp  d2  d2.cpp  d3  d3.cpp
v5(识别[初级]/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  e1  e1.cpp  e2  e2.cpp  f1  f1.cpp  f2  f2.cpp  f3  f3.cpp
v6/: CMakeLists.txt
v6/include/: Congfig.hpp  PoseSlove.hpp
v6/main/: Armors.cpp  CMakeLists.txt  Main.cpp  PoseSlove.cpp  draw.cpp
v6/src/: calib_result.yml
v6（新/.github/: copilot-instructions.md
v6（新/include/: Kalman.hpp  PoseSlove.hpp
v6（新/main/: Config.cpp  Main2.cpp  Main3.cpp  draw.cpp
v6（新/src/: congfig.yaml
v7/: CMakeLists.txt
v7/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
v7/build1/main/: Armor  Makefile  cmake_install.cmake
v7/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
v7/build2/main/: Armor  Makefile
v7/build3/: CMakeCache.txt  Makefile  cmake_install.cmake
v7/build3/main/: Armor  Makefile
v7/build4/: CMakeCache.txt  Makefile  cmake_install.cmake
v7/build4/main/: Armor  Makefile
v7/include/: Config.hpp  Congfig.hpp  DrawTrack.hpp  DrawTracke1.hpp  ExtendedKalman.hpp  Kalman.hpp  KalmanTracker.hpp  Serial.hpp  Struct.hpp  serial.hpp
v7/main/: Armors.cpp  CMakeLists.txt  Contours.cpp  DrawTrack4points.cpp  DrawTracke1.cpp  DrawTracke2.cpp  ExtendedKakman.cpp  ExtendedKalman.cpp  Kalman.cpp  KalmanTracker.cpp  LightBar.cpp  Main1.cpp  Main2.1.cpp  Main2.cpp  Main3.cpp  Main4.cpp  PoseSlove.cpp  PoseSlove1.cpp  PreProcess.cpp  Serial.cpp  draw.cpp
v7/src/: congfig.yaml
标定/: CMakeLists.txt  calib_result.yml  main.cpp
