cmake_minimum_required(VERSION 3.15)
project(cv1)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(a1 test.cpp)
add_executable(b1 cv1.cpp)
add_executable(b2 cv2.cpp)
add_executable(b3 cv3.cpp)
add_executable(b4 cv4.cpp)
target_link_libraries(a1 ${OpenCV_LIBS})
target_link_libraries(b1 ${OpenCV_LIBS})
target_link_libraries(b2 ${OpenCV_LIBS})
target_link_libraries(b3 ${OpenCV_LIBS})
target_link_libraries(b4 ${OpenCV_LIBS})  