cmake_minimum_required(VERSION 3.15)
project(cv2)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(c1 cvv1.cpp)
add_executable(c2 cvv2.cpp)
add_executable(c3 cvv3.cpp)
add_executable(c4 cvv4.cpp)
add_executable(c5 cvv5.cpp)
add_executable(c6 cvv6.cpp)
target_link_libraries(c1  ${OpenCV_LIBS})
target_link_libraries(c2  ${OpenCV_LIBS})
target_link_libraries(c3  ${OpenCV_LIBS})
target_link_libraries(c4  ${OpenCV_LIBS})
target_link_libraries(c5  ${OpenCV_LIBS})
target_link_libraries(c6  ${OpenCV_LIBS})