cmake_minimum_required(VERSION 3.15)
project(cv3)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(d1 d1.cpp)
add_executable(d2 d2.cpp)
add_executable(d3 d3.cpp)
target_link_libraries(d1 ${OpenCV_LIBS})
target_link_libraries(d2 ${OpenCV_LIBS})
target_link_libraries(d3 ${OpenCV_LIBS})