cmake_minimum_required(VERSION 3.15)
project(cv4)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(e1 e1.cpp)
add_executable(e2 e2.cpp)
add_executable(f1 f1.cpp)
add_executable(f2 f2.cpp)
add_executable(f3 f3.cpp)
target_link_libraries(e1 ${OpenCV_LIBS})
target_link_libraries(e2 ${OpenCV_LIBS})
target_link_libraries(f1 ${OpenCV_LIBS})
target_link_libraries(f2 ${OpenCV_LIBS})
target_link_libraries(f3 ${OpenCV_LIBS})